--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,9 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "src/**/*.vue",
+    "packages/**/*.ts",
+    "packages/**/*.tsx",
+    "packages/**/*.vue",
     "types/**/*.ts",
     "types/**/*.d.ts",
     "tests/**/*.ts",
