--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "prettier": "npx prettier --write --config .prettierrc.js src/**/*",
     "lintfix": "eslint --fix --ext .js,.jsx,.vue,.ts,.tsx --config .eslintrc.js",
     "dev": "cross-env NODE_ENV=development webpack serve --config ./build/webpack.dev.config.js",
-    "build": "cross-env NODE_ENV=production webpack --config ./build/webpack.example.prod.config.js"
+    "build": "cross-env NODE_ENV=production webpack --config ./build/webpack.example.prod.config.js",
+    "build:theme": "gulp build --gulpfile packages/theme/gulpfile.js && cp-cli packages/theme/lib lib/theme"
   },
   "keywords": [
     "element",
@@ -32,16 +33,21 @@
     "@vue/eslint-config-typescript": "^7.0.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "cp-cli": "^2.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.6",
     "eslint": "^7.27.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^6.2.2",
     "file-loader": "^6.2.0",
+    "gulp": "^4.0.2",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-less": "^5.0.0",
     "html-webpack-plugin": "^4.5.2",
     "husky": "^6.0.0",
     "less": "^4.1.1",
     "less-loader": "5.0.0",
+    "less-plugin-autoprefix": "^2.0.0",
     "lint-staged": "^11.0.0",
     "mini-css-extract-plugin": "^1.6.2",
     "node-sass": "^6.0.0",
