--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -15,5 +15,11 @@
     "theme"
   ],
   "author": "feasin",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-less": "^5.0.0",
+    "gulp-cssmin": "^0.2.0",
+    "less-plugin-autoprefix": "^2.0.0"
+  }
 }
