--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vf-vue-ui",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Vue View Frame UI",
   "main": "src/index.ts",
   "files": [
@@ -63,6 +63,10 @@
     "url-loader": "^4.1.1",
     "vue-loader": "^15.9.7",
     "vue-template-compiler": "^2.6.12",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2",
@@ -75,10 +79,6 @@
     ]
   },
   "dependencies": {
-    "vue": "^2.6.12",
-    "vue-class-component": "^7.2.6",
-    "vue-property-decorator": "^9.1.2",
-    "vue-router": "^3.5.1",
-    "vuex": "^3.6.2"
+    "vue": "^2.6.12"
   }
 }
