--- a/components.json
+++ b/components.json
@@ -1,5 +1,6 @@
 {
   "index": "./src/index.ts",
   "alert": "./packages/alert/index.ts",
-  "task-tree": "./packages/task-tree/index.ts"
+  "task-tree": "./packages/task-tree/index.ts",
+  "medal": "./packages/medal/index.ts"
 }
