--- a/components.json
+++ b/components.json
@@ -4,5 +4,6 @@
   "task-tree": "./packages/task-tree/index.ts",
   "medal": "./packages/medal/index.ts",
   "tag": "./packages/tag/index.ts",
-  "icon": "./packages/icon/index.ts"
+  "icon": "./packages/icon/index.ts",
+  "input": "./packages/input/index.ts"
 }
