--- a/components.json
+++ b/components.json
@@ -5,5 +5,6 @@
   "medal": "./packages/medal/index.ts",
   "tag": "./packages/tag/index.ts",
   "icon": "./packages/icon/index.ts",
-  "input": "./packages/input/index.ts"
+  "input": "./packages/input/index.ts",
+  "button": "./packages/button/index.ts"
 }
