--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,8 +27,8 @@
     "packages/**/*.ts",
     "packages/**/*.tsx",
     "packages/**/*.vue",
-    "types/**/*.ts",
-    "types/**/*.d.ts",
+    "types/*.ts",
+    "types/*.d.ts",
     "tests/**/*.ts",
     "tests/**/*.tsx"
   ],
