--- a/components.json
+++ b/components.json
@@ -10,5 +10,6 @@
   "popover": "./packages/popover/index.ts",
   "select": "./packages/select/index.ts",
   "option": "./packages/option/index.ts",
-  "option-group": "./packages/option-group/index.ts"
+  "option-group": "./packages/option-group/index.ts",
+  "tooltip": "./packages/tooltip/index.ts"
 }
