--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@babel/preset-env": "^7.14.2",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
+    "@vue/babel-helper-vue-jsx-merge-props": "^1.2.1",
+    "@vue/babel-preset-jsx": "^1.2.4",
     "@vue/eslint-config-typescript": "^7.0.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
@@ -61,11 +63,11 @@
     "ts-loader": "8.3.0",
     "typescript": "4.1.5",
     "url-loader": "^4.1.1",
-    "vue-loader": "^15.9.7",
-    "vue-template-compiler": "^2.6.12",
     "vue-class-component": "^7.2.6",
+    "vue-loader": "^15.9.7",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
+    "vue-template-compiler": "^2.6.12",
     "vuex": "^3.6.2",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.7.0",
