--- a/components.json
+++ b/components.json
@@ -11,5 +11,7 @@
   "select": "./packages/select/index.ts",
   "option": "./packages/option/index.ts",
   "option-group": "./packages/option-group/index.ts",
-  "tooltip": "./packages/tooltip/index.ts"
+  "tooltip": "./packages/tooltip/index.ts",
+  "tabs": "./packages/tabs/index.ts",
+  "tab-pane": "./packages/tab-pane/index.ts"
 }
